[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datatables_server"
version = "3.0.0"
description = "Server-side processing for DataTables and Editor using SQLAlchemy Core"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "SpryMedia Ltd" }]
urls = { "Homepage" = "https://datatables.net" }
license = {text = "MIT"}
keywords = ["datatables", "editor", "sqlalchemy", "server-side-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: SQLAlchemy",
]
dependencies = [
    "sqlalchemy>=2.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "black==24.*",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.setuptools.packages.find]
include = ["datatables_server*"]
